<resources>
    <string name="app_name">Take Stock</string>
    <string name="hint_name">Item name</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="stock">Stock: </string>
    <string name="description">Description </string>
    <string name="consumption_rate">Consumption Rate: </string>
    <string name="minimum_purchace_ammount">Minimum Purchace: </string>
    <string name="add_item">Add</string>
    <string name="current_stock">Current Stock</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="independence">Independence:</string>
    <string name="by">x</string>
    <string name="zero">0</string>
    <string name="title_activity_login">Sign in</string>
    <string name="consumed_on_these_dates">Consumed on these dates:</string>
    <string name="less_than">&lt;</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lorem">lorem</string>
    <string name="small_number">100.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consumed_every">Consumed every</string>


</resources>
