<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentEditItem">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:layout_margin="10dp"
        android:textSize="50dp"
        android:lines="1"
        android:layout_gravity="center_horizontal"
        >

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/current_stock"
            android:textSize="24sp"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/editTextStock"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:lines="1"
            android:inputType="number"
            android:text="@string/lorem_ipsum"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/consumption_rate"
            android:textSize="24dp"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/editTextConsumptionRate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="24dp"
            android:layout_marginLeft="5dp"
            android:inputType="number"
            android:lines="1"
            android:text="@string/lorem_ipsum"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minimum_purchace_ammount"
            android:textSize="24dp"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/editTextMinimumPurchaceAmmount"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="24dp"
            android:lines="1"
            android:layout_marginLeft="5dp"
            android:inputType="number"
            android:text="@string/lorem_ipsum"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save"/>

    </LinearLayout>

</LinearLayout>