<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_item_detail_main_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBackgroundColor"
    android:orientation="vertical"
    tools:context=".view.fragment.FragmentItemDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_item_detail_view_switcher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:measureAllChildren="false">

            <TextView
                android:id="@+id/text_view_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="?attr/primaryTextColor"
                android:textStyle="bold"
                tools:text="@string/lorem_ipsum"/>

            <EditText
                android:id="@+id/fragment_item_detail_hidden_edit_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:padding="3dp"
                android:inputType="textCapSentences"
                android:selectAllOnFocus="true"
                android:textSize="20sp"
                android:textStyle="bold" />

        </ViewSwitcher>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:scaleType="center"
            android:src="@drawable/ic_money_24dp" />

        <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_item_detail_view_switcher_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:measureAllChildren="false">

            <TextView
                android:id="@+id/text_view_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/small_number"/>

            <EditText
                android:id="@+id/fragment_item_detail_hidden_edit_text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:minWidth="50dp"
                android:padding="3dp"
                android:selectAllOnFocus="true"
                android:textSize="20sp"
                android:textStyle="bold" />

        </ViewSwitcher>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:drawableStart="@drawable/ic_timer"
            android:textColor="?attr/primaryTextColor"
            android:text="@string/consumed_every"
            android:textSize="18sp" />

        <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_item_detail_view_switcher_consumption_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:measureAllChildren="false">

            <TextView
                android:id="@+id/textViewConsumptionRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp"
                tools:text="@string/small_number"/>

            <EditText
                android:id="@+id/fragment_item_detail_hidden_edit_text_consumption_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="50dp"
                android:padding="3dp"
                android:selectAllOnFocus="true"
                android:textSize="18sp"

                />

        </ViewSwitcher>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableStart="@drawable/ic_minimum_purchace"
            android:textColor="?attr/primaryTextColor"
            android:text="@string/minimum_purchace_ammount"
            android:textSize="18sp" />


        <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_item_detail_view_switcher_minimum_purchace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:measureAllChildren="false">

            <TextView
                android:id="@+id/textViewMinimumPurchaceAmmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp"
                tools:text="@string/small_number"/>

            <EditText
                android:id="@+id/fragment_item_detail_hidden_edit_text_minimum_purchace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="50dp"
                android:padding="3dp"
                android:selectAllOnFocus="true"
                android:textSize="18sp" />

        </ViewSwitcher>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/ic_emoticon_happy"
            android:textColor="?attr/primaryTextColor"
            android:text="@string/independence"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_independence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            tools:text="@string/small_number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/ic_home_24dp"
            android:textColor="?attr/primaryTextColor"
            android:text="@string/stock"
            android:textSize="18sp" />


        <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_item_detail_view_switcher_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:measureAllChildren="false">

            <TextView
                android:id="@+id/text_view_item_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp"
                tools:text="@string/small_number"/>

            <EditText
                android:id="@+id/fragment_item_detail_hidden_edit_text_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="50dp"
                android:padding="3dp"
                android:selectAllOnFocus="true"
                android:textSize="18sp" />

        </ViewSwitcher>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_action_buttons"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="center"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_home_minus_enabled" />

        <ImageView
            android:id="@+id/button_cart_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/ic_cart_substract_enabled"
            android:textSize="24sp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/button_cart_to_stock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            tools:text="00"
            android:drawableStart="@drawable/ic_move_to"
            android:drawableEnd="@drawable/ic_shopping_cart_24dp"/>

        <ImageView
            android:id="@+id/button_cart_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/ic_add_shopping_cart_full_enabled" />

        <TextView
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_home_plus"
            android:gravity="center"
            android:paddingEnd="3dp"
            android:paddingStart="15dp"
            android:textAlignment="textStart"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            tools:text="00"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="center"
                android:src="@drawable/ic_cancel_24dp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <ImageView
                android:id="@+id/button_save"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="center"
                android:src="@drawable/ic_save_24dp"
                android:visibility="gone"
                tools:visibility="visible"/>


        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/primary"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/badges"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/tab_text"
        app:tabTextColor="@color/secondary_text" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_consumptions_purchaces"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>